// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelHeader should render archived view 1`] = `
<div
  className="channel-header alt"
  id="channel-header"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
          id="channelHeaderTitle"
        >
          <h2>
            <button
              aria-expanded="true"
              className="dropdown-toggle theme style--none"
              data-toggle="dropdown"
              id="channelHeaderDropdownButton"
              type="button"
            >
              <strong
                className="heading"
                id="channelHeaderTitle"
              >
                <ArchiveIcon
                  className="icon icon__archive icon channel-header-archived-icon svg-text-color"
                />
              </strong>
              <span
                className="fa fa-angle-down header-dropdown__icon"
                id="channelHeaderDropdownIcon"
                title="Dropdown Icon"
              />
            </button>
            <ul
              aria-labelledby="channel_header_dropdown"
              className="dropdown-menu"
              id="channelHeaderDropdownMenu"
              role="menu"
            >
              <li
                key="view_info"
                role="presentation"
              >
                <Connect(ModalToggleButtonRedux)
                  dialogProps={
                    Object {
                      "channel": Object {
                        "delete_at": 1234,
                        "id": "channel_id",
                        "name": "Test",
                        "team_id": "team_id",
                      },
                    }
                  }
                  dialogType={[Function]}
                  id="channelViewInfo"
                  modalId="channel_info"
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Info"
                    id="channel_header.viewInfo"
                    values={Object {}}
                  />
                </Connect(ModalToggleButtonRedux)>
              </li>
              <li
                key="manage_members"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelManageMembers"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Members"
                    id="channel_header.viewMembers"
                    values={Object {}}
                  />
                </button>
              </li>
              <li
                key="dropdown_mute"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelMute"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Mute Channel"
                    id="channel_header.mute"
                    values={Object {}}
                  />
                </button>
              </li>
              <li
                className="divider"
                key="divider-1"
              />
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                invert={true}
                key="view_members_permission"
                permissions={
                  Array [
                    "manage_public_channel_members",
                  ]
                }
                teamId=""
              >
                <li
                  key="view_members"
                  role="presentation"
                >
                  <button
                    className="style--none"
                    id="channelViewMembers"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="View Members"
                      id="channel_header.viewMembers"
                      values={Object {}}
                    />
                  </button>
                </li>
              </Connect(ChannelPermissionGate)>
              <li
                key="leave_channel"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelLeave"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Leave Channel"
                    id="channel_header.leave"
                    values={Object {}}
                  />
                </button>
              </li>
              <li
                key="close_channel"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelClose"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Close Channel"
                    id="center_panel.archived.closeChannel"
                    values={Object {}}
                  />
                </button>
              </li>
            </ul>
          </h2>
        </div>
        <div
          className="channel-header__description light"
          id="channelHeaderDescription"
        />
      </div>
    </div>
    <div
      className="flex-child"
    />
    <div
      className="flex-child"
    >
      <Connect(PopoverListMembers)
        channel={
          Object {
            "delete_at": 1234,
            "id": "channel_id",
            "name": "Test",
            "team_id": "team_id",
          }
        }
      />
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "delete_at": 1234,
          "id": "channel_id",
          "name": "Test",
          "team_id": "team_id",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      buttonClass="style--none channel-header__icon"
      buttonId="channelHeaderPinButton"
      iconComponent={
        <PinIcon
          aria-hidden="true"
          className="icon icon__pin"
        />
      }
      onClick={[Function]}
      tooltipKey="pinnedPosts"
    />
    <HeaderIconWrapper
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon__search icon--stroke"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon__mentions"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
  </div>
  <Connect(ChannelNotificationsModal)
    channel={
      Object {
        "delete_at": 1234,
        "id": "channel_id",
        "name": "Test",
        "team_id": "team_id",
      }
    }
    channelMember={
      Object {
        "channel_id": "channel_id",
        "user_id": "user_id",
      }
    }
    currentUser={
      Object {
        "id": "user_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(InjectIntl(RenameChannelModal))
    channel={
      Object {
        "delete_at": 1234,
        "id": "channel_id",
        "name": "Test",
        "team_id": "team_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
</div>
`;

exports[`components/ChannelHeader should render correct menu when muted 1`] = `
<div
  className="channel-header alt"
  id="channel-header"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
          id="channelHeaderTitle"
        >
          <h2>
            <button
              aria-expanded="true"
              className="dropdown-toggle theme style--none"
              data-toggle="dropdown"
              id="channelHeaderDropdownButton"
              type="button"
            >
              <strong
                className="heading"
                id="channelHeaderTitle"
              >
                <ArchiveIcon
                  className="icon icon__archive icon channel-header-archived-icon svg-text-color"
                />
              </strong>
              <span
                className="fa fa-angle-down header-dropdown__icon"
                id="channelHeaderDropdownIcon"
                title="Dropdown Icon"
              />
            </button>
            <ul
              aria-labelledby="channel_header_dropdown"
              className="dropdown-menu"
              id="channelHeaderDropdownMenu"
              role="menu"
            >
              <li
                key="view_info"
                role="presentation"
              >
                <Connect(ModalToggleButtonRedux)
                  dialogProps={
                    Object {
                      "channel": Object {
                        "id": "channel_id",
                        "name": "Test",
                        "team_id": "team_id",
                      },
                    }
                  }
                  dialogType={[Function]}
                  id="channelViewInfo"
                  modalId="channel_info"
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Info"
                    id="channel_header.viewInfo"
                    values={Object {}}
                  />
                </Connect(ModalToggleButtonRedux)>
              </li>
              <li
                key="manage_members"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelManageMembers"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Members"
                    id="channel_header.viewMembers"
                    values={Object {}}
                  />
                </button>
              </li>
              <li
                key="dropdown_unmute"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelUnmute"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Unmute Channel"
                    id="channel_header.unmute"
                    values={Object {}}
                  />
                </button>
              </li>
              <li
                className="divider"
                key="divider-1"
              />
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                invert={true}
                key="view_members_permission"
                permissions={
                  Array [
                    "manage_public_channel_members",
                  ]
                }
                teamId=""
              >
                <li
                  key="view_members"
                  role="presentation"
                >
                  <button
                    className="style--none"
                    id="channelViewMembers"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="View Members"
                      id="channel_header.viewMembers"
                      values={Object {}}
                    />
                  </button>
                </li>
              </Connect(ChannelPermissionGate)>
              <li
                key="leave_channel"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelLeave"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Leave Channel"
                    id="channel_header.leave"
                    values={Object {}}
                  />
                </button>
              </li>
              <li
                key="close_channel"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelClose"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Close Channel"
                    id="center_panel.archived.closeChannel"
                    values={Object {}}
                  />
                </button>
              </li>
            </ul>
          </h2>
          <OverlayTrigger
            defaultOverlayShown={false}
            delayShow={400}
            overlay={
              <Tooltip
                bsClass="tooltip"
                id="channelMutedTooltip"
                placement="right"
              >
                <FormattedMessage
                  defaultMessage="Unmute"
                  id="channelHeader.unmute"
                  values={Object {}}
                />
              </Tooltip>
            }
            placement="bottom"
            trigger={
              Array [
                "hover",
                "focus",
              ]
            }
          >
            <button
              aria-label="Muted Icon"
              className="style--none color--link channel-header__mute inactive"
              id="toggleMute"
              onClick={[Function]}
            >
              <i
                className="icon fa fa-bell-slash-o"
              />
            </button>
          </OverlayTrigger>
        </div>
        <div
          className="channel-header__description light"
          id="channelHeaderDescription"
        />
      </div>
    </div>
    <div
      className="flex-child"
    />
    <div
      className="flex-child"
    >
      <Connect(PopoverListMembers)
        channel={
          Object {
            "id": "channel_id",
            "name": "Test",
            "team_id": "team_id",
          }
        }
      />
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "id": "channel_id",
          "name": "Test",
          "team_id": "team_id",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "notify_props": Object {
            "mark_unread": "mention",
          },
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      buttonClass="style--none channel-header__icon"
      buttonId="channelHeaderPinButton"
      iconComponent={
        <PinIcon
          aria-hidden="true"
          className="icon icon__pin"
        />
      }
      onClick={[Function]}
      tooltipKey="pinnedPosts"
    />
    <HeaderIconWrapper
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon__search icon--stroke"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon__mentions"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
  </div>
  <Connect(ChannelNotificationsModal)
    channel={
      Object {
        "id": "channel_id",
        "name": "Test",
        "team_id": "team_id",
      }
    }
    channelMember={
      Object {
        "channel_id": "channel_id",
        "notify_props": Object {
          "mark_unread": "mention",
        },
        "user_id": "user_id",
      }
    }
    currentUser={
      Object {
        "id": "user_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(InjectIntl(RenameChannelModal))
    channel={
      Object {
        "id": "channel_id",
        "name": "Test",
        "team_id": "team_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
</div>
`;

exports[`components/ChannelHeader should render properly when empty 1`] = `
<div
  className="channel-header"
/>
`;

exports[`components/ChannelHeader should render properly when populated 1`] = `
<div
  className="channel-header alt"
  id="channel-header"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
          id="channelHeaderTitle"
        >
          <h2>
            <button
              aria-expanded="true"
              className="dropdown-toggle theme style--none"
              data-toggle="dropdown"
              id="channelHeaderDropdownButton"
              type="button"
            >
              <strong
                className="heading"
                id="channelHeaderTitle"
              >
                <ArchiveIcon
                  className="icon icon__archive icon channel-header-archived-icon svg-text-color"
                />
              </strong>
              <span
                className="fa fa-angle-down header-dropdown__icon"
                id="channelHeaderDropdownIcon"
                title="Dropdown Icon"
              />
            </button>
            <ul
              aria-labelledby="channel_header_dropdown"
              className="dropdown-menu"
              id="channelHeaderDropdownMenu"
              role="menu"
            >
              <li
                key="view_info"
                role="presentation"
              >
                <Connect(ModalToggleButtonRedux)
                  dialogProps={
                    Object {
                      "channel": Object {
                        "id": "channel_id",
                        "name": "Test",
                        "team_id": "team_id",
                      },
                    }
                  }
                  dialogType={[Function]}
                  id="channelViewInfo"
                  modalId="channel_info"
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Info"
                    id="channel_header.viewInfo"
                    values={Object {}}
                  />
                </Connect(ModalToggleButtonRedux)>
              </li>
              <li
                key="manage_members"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelManageMembers"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Members"
                    id="channel_header.viewMembers"
                    values={Object {}}
                  />
                </button>
              </li>
              <li
                key="dropdown_mute"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelMute"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Mute Channel"
                    id="channel_header.mute"
                    values={Object {}}
                  />
                </button>
              </li>
              <li
                className="divider"
                key="divider-1"
              />
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                invert={true}
                key="view_members_permission"
                permissions={
                  Array [
                    "manage_public_channel_members",
                  ]
                }
                teamId=""
              >
                <li
                  key="view_members"
                  role="presentation"
                >
                  <button
                    className="style--none"
                    id="channelViewMembers"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="View Members"
                      id="channel_header.viewMembers"
                      values={Object {}}
                    />
                  </button>
                </li>
              </Connect(ChannelPermissionGate)>
              <li
                key="leave_channel"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelLeave"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Leave Channel"
                    id="channel_header.leave"
                    values={Object {}}
                  />
                </button>
              </li>
              <li
                key="close_channel"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelClose"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Close Channel"
                    id="center_panel.archived.closeChannel"
                    values={Object {}}
                  />
                </button>
              </li>
            </ul>
          </h2>
        </div>
        <div
          className="channel-header__description light"
          id="channelHeaderDescription"
        />
      </div>
    </div>
    <div
      className="flex-child"
    />
    <div
      className="flex-child"
    >
      <Connect(PopoverListMembers)
        channel={
          Object {
            "id": "channel_id",
            "name": "Test",
            "team_id": "team_id",
          }
        }
      />
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "id": "channel_id",
          "name": "Test",
          "team_id": "team_id",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      buttonClass="style--none channel-header__icon"
      buttonId="channelHeaderPinButton"
      iconComponent={
        <PinIcon
          aria-hidden="true"
          className="icon icon__pin"
        />
      }
      onClick={[Function]}
      tooltipKey="pinnedPosts"
    />
    <HeaderIconWrapper
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon__search icon--stroke"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon__mentions"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
  </div>
  <Connect(ChannelNotificationsModal)
    channel={
      Object {
        "id": "channel_id",
        "name": "Test",
        "team_id": "team_id",
      }
    }
    channelMember={
      Object {
        "channel_id": "channel_id",
        "user_id": "user_id",
      }
    }
    currentUser={
      Object {
        "id": "user_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(InjectIntl(RenameChannelModal))
    channel={
      Object {
        "id": "channel_id",
        "name": "Test",
        "team_id": "team_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
</div>
`;

exports[`components/ChannelHeader should render properly when populated with channel props 1`] = `
<div
  className="channel-header alt"
  id="channel-header"
>
  <div
    className="flex-parent"
  >
    <div
      className="flex-child"
    >
      <div
        className="channel-header__info"
        id="channelHeaderInfo"
      >
        <div
          className="channel-header__title dropdown"
          id="channelHeaderTitle"
        >
          <h2>
            <button
              aria-expanded="true"
              className="dropdown-toggle theme style--none"
              data-toggle="dropdown"
              id="channelHeaderDropdownButton"
              type="button"
            >
              <strong
                className="heading"
                id="channelHeaderTitle"
              >
                <ArchiveIcon
                  className="icon icon__archive icon channel-header-archived-icon svg-text-color"
                />
              </strong>
              <span
                className="fa fa-angle-down header-dropdown__icon"
                id="channelHeaderDropdownIcon"
                title="Dropdown Icon"
              />
            </button>
            <ul
              aria-labelledby="channel_header_dropdown"
              className="dropdown-menu"
              id="channelHeaderDropdownMenu"
              role="menu"
            >
              <li
                key="view_info"
                role="presentation"
              >
                <Connect(ModalToggleButtonRedux)
                  dialogProps={
                    Object {
                      "channel": Object {
                        "header": "See ~test",
                        "id": "channel_id",
                        "name": "Test",
                        "props": Object {
                          "channel_mentions": Object {
                            "test": Object {
                              "display_name": "Test",
                            },
                          },
                        },
                        "team_id": "team_id",
                      },
                    }
                  }
                  dialogType={[Function]}
                  id="channelViewInfo"
                  modalId="channel_info"
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Info"
                    id="channel_header.viewInfo"
                    values={Object {}}
                  />
                </Connect(ModalToggleButtonRedux)>
              </li>
              <li
                key="manage_members"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelManageMembers"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Members"
                    id="channel_header.viewMembers"
                    values={Object {}}
                  />
                </button>
              </li>
              <li
                key="dropdown_mute"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelMute"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Mute Channel"
                    id="channel_header.mute"
                    values={Object {}}
                  />
                </button>
              </li>
              <li
                className="divider"
                key="divider-1"
              />
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                invert={true}
                key="view_members_permission"
                permissions={
                  Array [
                    "manage_public_channel_members",
                  ]
                }
                teamId=""
              >
                <li
                  key="view_members"
                  role="presentation"
                >
                  <button
                    className="style--none"
                    id="channelViewMembers"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="View Members"
                      id="channel_header.viewMembers"
                      values={Object {}}
                    />
                  </button>
                </li>
              </Connect(ChannelPermissionGate)>
              <li
                key="leave_channel"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelLeave"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Leave Channel"
                    id="channel_header.leave"
                    values={Object {}}
                  />
                </button>
              </li>
              <li
                key="close_channel"
                role="presentation"
              >
                <button
                  className="style--none"
                  id="channelClose"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Close Channel"
                    id="center_panel.archived.closeChannel"
                    values={Object {}}
                  />
                </button>
              </li>
            </ul>
          </h2>
        </div>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <Popover
              bSize="large"
              bStyle="info"
              bsClass="popover"
              className="channel-header__popover"
              id="header-popover"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              placement="bottom"
            >
              <Connect(Markdown)
                message="See ~test"
                options={
                  Object {
                    "atMentions": true,
                    "channelNamesMap": Object {
                      "test": Object {
                        "display_name": "Test",
                      },
                    },
                    "mentionHighlight": false,
                    "singleline": false,
                  }
                }
              />
            </Popover>
          }
          placement="bottom"
          rootClose={true}
          trigger="click"
        >
          <div
            className="channel-header__description"
            id="channelHeaderDescription"
          >
            <span
              onClick={[Function]}
            >
              <Connect(Markdown)
                message="See ~test"
                options={
                  Object {
                    "atMentions": true,
                    "channelNamesMap": Object {
                      "test": Object {
                        "display_name": "Test",
                      },
                    },
                    "mentionHighlight": false,
                    "singleline": true,
                  }
                }
              />
            </span>
          </div>
        </OverlayTrigger>
      </div>
    </div>
    <div
      className="flex-child"
    />
    <div
      className="flex-child"
    >
      <Connect(PopoverListMembers)
        channel={
          Object {
            "header": "See ~test",
            "id": "channel_id",
            "name": "Test",
            "props": Object {
              "channel_mentions": Object {
                "test": Object {
                  "display_name": "Test",
                },
              },
            },
            "team_id": "team_id",
          }
        }
      />
    </div>
    <Connect(ChannelHeaderPlug)
      channel={
        Object {
          "header": "See ~test",
          "id": "channel_id",
          "name": "Test",
          "props": Object {
            "channel_mentions": Object {
              "test": Object {
                "display_name": "Test",
              },
            },
          },
          "team_id": "team_id",
        }
      }
      channelMember={
        Object {
          "channel_id": "channel_id",
          "user_id": "user_id",
        }
      }
    />
    <HeaderIconWrapper
      buttonClass="style--none channel-header__icon"
      buttonId="channelHeaderPinButton"
      iconComponent={
        <PinIcon
          aria-hidden="true"
          className="icon icon__pin"
        />
      }
      onClick={[Function]}
      tooltipKey="pinnedPosts"
    />
    <HeaderIconWrapper
      buttonId="channelHeaderSearchButton"
      iconComponent={
        <SearchIcon
          aria-hidden="true"
          className="icon icon__search icon--stroke"
        />
      }
      onClick={[Function]}
      tooltipKey="search"
    />
    <HeaderIconWrapper
      buttonId="channelHeaderMentionButton"
      iconComponent={
        <MentionsIcon
          aria-hidden="true"
          className="icon icon__mentions"
        />
      }
      onClick={[Function]}
      tooltipKey="recentMentions"
    />
    <HeaderIconWrapper
      buttonId="channelHeaderFlagButton"
      iconComponent={
        <FlagIcon
          className="icon icon__flag"
        />
      }
      onClick={[Function]}
      tooltipKey="flaggedPosts"
    />
  </div>
  <Connect(ChannelNotificationsModal)
    channel={
      Object {
        "header": "See ~test",
        "id": "channel_id",
        "name": "Test",
        "props": Object {
          "channel_mentions": Object {
            "test": Object {
              "display_name": "Test",
            },
          },
        },
        "team_id": "team_id",
      }
    }
    channelMember={
      Object {
        "channel_id": "channel_id",
        "user_id": "user_id",
      }
    }
    currentUser={
      Object {
        "id": "user_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(InjectIntl(RenameChannelModal))
    channel={
      Object {
        "header": "See ~test",
        "id": "channel_id",
        "name": "Test",
        "props": Object {
          "channel_mentions": Object {
            "test": Object {
              "display_name": "Test",
            },
          },
        },
        "team_id": "team_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
</div>
`;
